[tool.poetry]
name = "aai"
version = "0.1.0"
description = "Video summarization service"
authors = ["Anton Belousov <anton@belousov.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.29.0"
openai = "^1.6.0"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
